tests/compile-fail/generated/derives-span-PartialEq-enum-struct-variant.stderr
error[E0369]: binary operation `==` cannot be applied to type `&Error`
  --> $DIR/derives-span-PartialEq-enum-struct-variant.rs:17:6
   |
17 |      x: Error
   |      ^
   |
   = note: an implementation of `std::cmp::PartialEq` might be missing for `&Error`
